--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dayjs": "^1.4.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "filepond-plugin-file-validate-type": "^1.2.6",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-preview": "^4.6.10",
+    "nuxt": "^2.13.3",
+    "vue-advanced-cropper": "^1.9.0",
+    "vue-filepond": "^6.0.0",
+    "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
