--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vue-toastification": "^1.7.14",
-    "webpack": "^5.69.1"
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
@@ -33,6 +32,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "postcss": "^8.4.4"
+    "postcss": "^8.4.4",
+    "webpack": "^4.46.0"
   }
 }
