--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "body-parser": "^1.19.2",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.3",
+    "cors": "^2.8.5",
     "nuxt": "^2.15.8",
     "open-graph-scraper": "^4.11.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vue-toastification": "^1.7.14"
+    "vue-toastification": "^1.7.14",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.32"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
