--- a/package.json
+++ b/package.json
@@ -12,17 +12,25 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@popperjs/core": "2.9.1",
     "body-parser": "^1.19.2",
+    "bootstrap-icons": "^1.8.1",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.3",
     "cors": "^2.8.5",
     "nuxt": "^2.15.8",
     "open-graph-scraper": "^4.11.0",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -35,10 +43,12 @@
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
     "webpack": "^4.46.0"
   }
 }
