--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
-    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
@@ -30,11 +26,11 @@
     "cors": "^2.8.5",
     "nuxt": "^2.15.8",
     "open-graph-scraper": "^4.11.0",
-    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-toastification": "^1.7.14",
+    "vuex-persist": "^3.1.3",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.32"
   },
