--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@popperjs/core": "2.9.1",
     "body-parser": "^1.19.2",
@@ -24,9 +25,15 @@
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.3",
     "cors": "^2.8.5",
+    "daisyui": "^2.19.0",
+    "filepond-plugin-file-validate-size": "^2.2.7",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-preview": "^4.6.11",
     "nuxt": "^2.15.8",
     "open-graph-scraper": "^4.11.0",
     "vue": "^2.6.14",
+    "vue-filepond": "^6.0.3",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-toastification": "^1.7.14",
