--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/vercel-builder": "^0.22.1",
     "@popperjs/core": "2.9.1",
     "body-parser": "^1.19.2",
     "bootstrap-icons": "^1.8.1",
