--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^3.19.3",
     "cors": "^2.8.5",
     "daisyui": "^2.19.0",
+    "filepond": "^4.30.4",
     "filepond-plugin-file-validate-size": "^2.2.7",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-crop": "^2.0.6",
